# RoboticTourGuide

./: README.md
FRI1FinalProject/: README.md
FRI1FinalProject/Kinect_Code/: CMakeLists.txt
FRI1FinalProject/Kinect_Code/VS_Files/: simple_cpp_sample.vcxproj  simple_cpp_sample.vcxproj.filters
FRI1FinalProject/Kinect_Code/include/: HandRaiseDetector.hpp
FRI1FinalProject/Kinect_Code/src/: CMakeLists.txt  Client.hpp  HandRaiseDetector.cpp  HandRaiseDetector.hpp  main.cpp
FRI1FinalProject/fri_person_following/: CMakeLists.txt  package.xml
FRI1FinalProject/fri_person_following/include/: Server.hpp
FRI1FinalProject/fri_person_following/src/: main.cpp
